# template-library

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-clang-windows.yml  cmake-msvc-windows.yml
include/: CMakeLists.txt
include/fox/: free_list.hpp  inplace_free_list.hpp  intrusive_list.hpp  ptr_vector.hpp
include/fox/iterator/: indirect_iterator.hpp
test/: CMakeLists.txt  free_list_test.cc  inplace_free_list_test.cc  intrusive_list_test.cc  ptr_vector_test.cc
test/iterator/: indirect_iterator_test.cc
